--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,7 @@
   "image": "mcr.microsoft.com/devcontainers/base:ubuntu", 
   "features": {
     "ghcr.io/devcontainers/features/python:1": {
-      "version": "latest"
+      "version": "3.8"
     },
     "ghcr.io/devcontainers/features/node:1": {
       "version": "lts"
